# robby-fischer

./: .gitignore  Cargo.toml  README.md  flake.nix  memory.x  requirements.txt  run.sh  rust-toolchain.toml
.cargo/: config.toml
arm/: Cargo.toml
arm/src/: hardware.rs  main.rs  stepper.rs
burktelefon/: Cargo.toml
burktelefon/src/: lib.rs
burktelefon/tests/: parse.rs  progress.rs
eagle/: .gitignore  Cargo.toml  annotate.py  calib_color_cam.py  main.py  record.py  train.py  vikter.txt
eagle/src/: lib.rs  main.rs  markers.rs  vis_camera.rs  vision.rs
parrot/: Cargo.toml
parrot/src/: lib.rs  request.rs
planner/: .gitignore  Cargo.toml  blueprint.py  calibrater.py  err.txt  fix_xacro.sh
planner/arm_description/: package.xml
planner/arm_description/launch/: robot_description.launch.py
planner/arm_description/meshes/: Component18_1.stl  base_link.stl  hake2_1.stl  kortarm_kopia_1.stl  kortarm_kopia_Mirror__1.stl  led_axel_1.stl  l†ng_arm_1.stl  mount_1.stl
planner/arm_description/urdf/: arm.trans  arm.urdf  arm.xacro
planner/arm_description/urdf/pieces/: board.gltf  king.stl  platta.stl  queen.stl  rook.stl
planner/old_ad/: CMakeLists.txt
planner/old_ad/meshes/: bas_1.stl  base_link.stl  botten_snurr_1.stl  gemensam_vagg_1.stl  glid_platta_1.stl  hake_1.stl  led_1.stl  l†ng_arm_Mirror__1.stl  ram_1.stl  snurr_hallare_stepper_sida_1.stl
planner/old_ad/urdf/: arm.xacro  example.urdf  materials.xacro
planner/old_ad/urdf/pieces/: bishop.stl  knight.stl  pawn.stl
planner/src/: app.rs  arm.rs  board.rs  chess.rs  lib.rs  main.rs  mesh_conversion.rs  moves.rs  pathfinding.rs  termdev.rs  uci.rs  utils.rs
planner/src/ref_duckchess/: fen.rs  mod.rs  moves.rs  piece.rs  position.rs  square.rs
planner/src/sharedbin/: calibrate.rs  follow.rs  play.rs
planner/src/visualizer/: arm_vis.rs  board_vis.rs  extcamera.rs  gltf_logging.rs  mesh_conversion.rs  mod.rs  visualizer.rs
src/: hardware.rs  lib.rs  main.rs  stepper.rs
