[package]
name = "arm"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
debugless-unwrap = "0.0.4"
embedded-alloc = "0.5.0"
embedded-hal = "0.2.7"
libm = "0.2.6"
rp-pico = "0.6.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
burktelefon = { path = "../burktelefon" }
robby-fischer = {path = ".." }
mlx90393 = { git = "https://github.com/02alexander/mlx90393-rs" }
fugit = "0.3.7"
