[package]
name = "eagle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
freenectrs = "0.1.0"
glam = "0.24.2"
image = "0.24.7"
minifb = "0.24.0"
once_cell = "1.18.0"
opencv = { version="0.92.0", features=["aruco", "aruco_detector", "xobjdetect", "objdetect", "calib3d"]}
rerun = {version="0.17.0", optional=true}

[features]
vis = ["dep:rerun"]
