[package]
name = "parrot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
futures-util = "0.3.28"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["rt", "macros"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"]}
