[package]
name = "planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
crossterm = "0.26.1"
nalgebra = "0.32.2"
nix = {version = "0.26.2", features = ["term"] }
tui = "0.19.0"
robby-fischer = {path = ".." }
arrayvec = "0.7.2"
lazy_static = "1.4.0"
parrot = {path="../parrot" }
eagle = {path = "../eagle", features=["vis"]}
# eagle = {path = "../eagle"}
shakmaty = "0.26.0"
uci = "0.1.3"

# The folder for the binaries can't be called 'bin' or vscode liveshare will stop working.
[[bin]]
name = "follow"
path = "src/sharedbin/follow.rs"

[[bin]]
name = "calibrate"
path = "src/sharedbin/calibrate.rs"

[[bin]]
name = "play"
path = "src/sharedbin/play.rs"

