[package]
name = "planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
crossterm = "0.26.1"
nix = { version = "0.26.2", features = ["term"] }
tui = "0.19.0"
robby-fischer = { path = ".." }
arrayvec = "0.7.2"
lazy_static = "1.4.0"
parrot = { path = "../parrot" }
eagle = { path = "../eagle", default-features = false }
glam = "0.22"
rerun = { version = "0.17.0", optional = true }
gltf = { version = "1.4.1", optional = true }
stl_io = { version = "0.7.0", optional = true }
k = {version = "0.31.0", optional = true }
shakmaty = "0.26.0"
once_cell = "1.19.0"
bytes = "1.6.1"
ecolor = "0.28.1"
ordered-float = "4.2.1"
uuid = {version="1.10.0", features = ["v4"]}
rand = "0.8.5"

[features]
vis = ["dep:rerun", "dep:gltf", "dep:stl_io", "dep:k", "eagle/vis"]
